tests/snapshots/examples_fixtures/type_system__failing__177_module_missing_open_brace.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/177_module_missing_open_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Module Body

This module body needs to start with `{`.

  examples/type_system/failing/177_module_missing_open_brace.flx:24:1
   |
24 | let x = 1
   | ^^^

Hint:
  Module declarations use `module Name { ... }`.

Note:
  while parsing module `Demo`
== stdout ==
<not executed>
